# eso_logs_dashboards

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lint.yml
src/: app.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 2024-06-08-00-17-34_59952a6fd61e_create_base_tables.py  2024-06-30-10-46-29_506f099f978b_create_base_tables.py  2024-06-30-10-47-09_fee6db95beea_zones_data_migration.py  2024-06-30-10-47-21_7342e246dd46_difficulties_data_migration.py  2024-06-30-10-47-30_4ea088a28854_encounters_data_migration.py  2024-06-30-10-47-40_24d5df3b62df_regions_data_migration.py  2024-06-30-10-47-47_a53bde07418a_specs_data_migration.py
src/auth/: __init__.py  auth.py
src/background/reports/: fetcher.py  schemas.py
src/core/: date_utils.py  null_safety.py  transform_utils.py
src/core/auth/: __init__.py  schemas.py  utils.py
src/core/di/: __init__.py  _configuration.py  _types.py
src/core/gql/: baseloader.py
src/db/: __init__.py  base.py  engine.py
src/db/models/: __init__.py  actor.py  fight.py  report.py
src/domain/ability/: commands.py  dto.py  loader.py  repository.py
src/domain/actor/: __init__.py  dto.py  repository.py  service.py
src/domain/fight/: __init__.py  dto.py  repository.py
src/domain/item/: __init__.py  commands.py  dto.py  loader.py  repository.py
src/domain/report/: __init__.py  commands.py  dto.py  loader.py  repository.py
src/tasks/: __init__.py  load_daily_reports.py  sync_abilities.py  sync_items.py
(+39 files in other folders)
